--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -13,11 +13,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 
+    <link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick-theme.css" />
+
+
 </head>
 
 <body>
     <app-root></app-root>
-	  <script src="node_modules/chart.js/src/chart.js"></script>
+    <script src="node_modules/chart.js/src/chart.js"></script>
+
+    <script type="text/javascript" src="http://kenwheeler.github.io/slick/slick/slick.js"></script>
+
 
 </body>
 
